[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
serde_repr = "0.1.9"
tokio = { version = "1.20.1", features = ["full"] }
reqwest = { version = "0.11.11", features = ["json"] }
async-tungstenite = { version = "0.17.2", features = ["tokio-runtime", "tokio-native-tls"] }
futures = "0.3.21"